@@ -15,12 +15,14 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Committing paste when changing tool is now enabled by default
 	* Saving an image now commits paste if auto commit mode is enabled
 	* The Free Rotate window now remembers the previous rotation angle in that mtPaint session
+	* Alpha values for colours A & B are now displayed on settings toolbar when editing image with alpha in coupled alpha mode
 	* Undo system now uses a bit less memory
 	* Support for compiling with giflib 5, libpng 1.6 and libjpeg 9 added
 	* BUGFIX - Compilation without JPEG and TIFF support now works again
 	* BUGFIX - FreeType text tool now skips directory loops when scanning font directories
 	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
 	* BUGFIX - Gradient button no longer fails to show current gradient mode after showing settings toolbar
+	* BUGFIX - Ctrl+left/right/double click now set both colour and alpha from canvas in coupled alpha mode, as they should
 	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
 	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
 	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
